fixes spacing of modal content when title bar present

--- a/jsapp/scss/components/_kobo.modal.scss
+++ b/jsapp/scss/components/_kobo.modal.scss
@@ -74,6 +74,10 @@
 
 .modal-body {
   padding: 20px 15px;
+
+  .modal-titled & {
+    padding: 30px 15px;
+  }
 }
 
 .modal-footer {
